# my-blog

./: .env.sample  .gitignore  README.md  docker-compose.yaml
admin/: package-lock.json  package.json
admin/src/app/: layout.tsx  page.tsx
admin/src/app/articles/: page.tsx  styles.module.scss
admin/src/components/Layout/: styles.module.scss
admin/src/services/: api.ts  articles.ts
admin/src/types/: data.d.ts
api/: Cargo.toml
api/migrations/: 20230806103343_CreateTable.sql  20230815162456_insert_samples.sql
api/src/: error.rs  main.rs  types.rs
api/src/database/: models.rs
api/src/database/models/articles/: handler.rs  types.rs
api/src/extractors/: claims.rs
api/src/routes/: articles.rs  index.rs  routes.rs
api/src/routes/admin/: articles.rs
api/src/routes/admin/articles/: handler.rs  routes.rs  types.rs
api/src/routes/articles/: handler.rs  routes.rs  types.rs
app/admin/: next.config.mjs  package-lock.json  package.json
app/admin/src/app/: layout.tsx  page.tsx  styles.module.scss
app/admin/src/types/: article.ts
app/admin/src/utils/: apiFetcher.ts  (+3 more)
app/backend/: Cargo.toml
app/backend/migrations/: 20240428142414_InsertSamples.sql
app/backend/src/: error.rs  extractors.rs  main.rs  routes.rs
app/front/: package-lock.json  package.json
docker/admin/: dockerfile
docker/backend/: dockerfile
docker/db/: Dockerfile
docker/front/: dockerfile
front/: .env.sample  package-lock.json  package.json
front/src/app/: layout.tsx  page.tsx  styles.module.scss
front/src/services/: api.ts  markdown.ts
front/src/types/: data.d.ts
(+139 files in other folders)
