[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = ["openssl"] }
actix-web-httpauth = "0.8.1"
awc = { version = "3.4.0", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.7.1", features = [ "runtime-tokio", "postgres", "migrate", "chrono", "json" ] }
once_cell = "1.19.0"
dotenv = "0.15.0"
derive_more = "0.99.17"
jsonwebtoken = "9.2.0"
openssl = "0.10.64"
actix-cors = "0.6"
